manifests/apps/irc/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: thelounge
  namespace: apps
spec:
  serviceName: thelounge
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: thelounge
  template:
    metadata:
      labels:
        app: thelounge
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      restartPolicy: Always
      containers:
        - name: thelounge
          image: ghcr.io/thelounge/thelounge:latest@sha256:3cc53915661c923e89769f61185db89ad7a2ab682d1fe20b48e8ab287fd753d3
          ports:
            - containerPort: 9000
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: thelounge-config
              mountPath: /var/opt/thelounge
          livenessProbe:
            tcpSocket:
              port: 9000
          readinessProbe:
            tcpSocket:
              port: 9000
  volumeClaimTemplates:
    - metadata:
        name: thelounge-config
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
        storageClassName: longhorn
