manifests/apps/irc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thelounge
  namespace: apps
spec:
  selector:
    app: thelounge
  ports:
    - name: http
      port: 9000
      targetPort: 9000
